--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.1",
     "lucide-react": "^0.544.0",
@@ -36,6 +37,7 @@
     "postgres": "^3.4.7",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
+    "react-compare-slider": "^3.1.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
