--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.1",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.3.9",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "radix-ui": "^1.4.3",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-compare-slider": "^3.1.0",
     "react-datepicker": "^8.7.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
@@ -55,7 +55,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "drizzle-kit": "^0.31.6",
